--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 fastapi = "^0.112.2"
 pydantic-settings = "^2.4.0"
 uvicorn = {extras = ["standart"], version = "^0.30.6"}
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
