--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pydantic-settings = "^2.4.0"
 uvicorn = {extras = ["standart"], version = "^0.30.6"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 asyncpg = "^0.29.0"
+alembic = "^1.13.2"
+fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
