--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
+httpx = "^0.27.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
