move app to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,25 @@ services:
     env_file:
       - .env
     restart: always
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "aleksrol", "-d", "notes"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
       - 5432:5432
     volumes:
       - pg_data:/var/lib/postgresql/data
+  
+  app:
+    build: ./
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   pg_data:
