--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
 httpx = "^0.27.2"
+gunicorn = "^23.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
