--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,7 @@ APP__DB__URL=postgresql+asyncpg://pg_user:pg_password@db:5432/notes
 APP__DB__ECHO=0
 APP__SECRET=ваша_секретная_фраза
 APP__SPELL__URL=https://speller.yandex.net/services/spellservice.json/checkText
-
-
-# HOST PARAMS
-APP_NAME=Notes API application
+APP__APP_NAME=Notes API application
 APP__SOCKET__HOST=0.0.0.0
 APP__SOCKET__PORT=8000
 APP__SOCKET__POOL_SIZE=30
